# emMCRadCorr

./: .gitmodules  CMakeLists.txt  README.md  e4nu_gpvm_env.sh  emMCRadCorr_gpvm_env.sh  processor_skeleton.cxx
data/: myevts.hepmc3
plotting/: ExtDataFig2.cpp  README.md  treeProducer_simulation.cpp  treeProducer_simulation.cpp~  treeProducer_simulation.h
scripts/: README.md  merge_gstfiles.sh  submit_rad_GENIE_gpvm.py  submit_rad_gpvm.py
scripts/plotting/: plot_radFactor_Hydrogen.cxx
src/: AppsUtils.cxx  AppsUtils.h  ConstantsI.cxx  Event.h  ParticleUtils.cxx  PlottingUtils.cxx  RadConstants.cxx  RadiativeCorrUtils.cxx  RadiativeCorrUtils.h  TargetUtils.cxx  Utils.h  process_radcorr.cxx  processor_skeleton.cxx  radiate_flux.cxx
